--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -423,7 +423,7 @@
 </div>
 <!-- END LOGIN -->
 <!-- BEGIN COPYRIGHT -->
-<div class="copyright"> 2014 &copy; Metronic - Admin Dashboard Template. </div>
+<div class="copyright">  </div>
 <!-- END COPYRIGHT -->
 <!--[if lt IE 9]>
 <script src="../../assets/global/plugins/respond.min.js"></script>
