--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -69,7 +69,7 @@
                 <input type="checkbox" name="remember" value="1" /> 记住我
                 <span></span>
             </label>
-            <button type="submit" class="btn green pull-right"> 登录 </button>
+            <button type="button" id="login-btn" class="btn green pull-right"> 登录 </button>
         </div>
         <div class="login-options">
             <h4>其他登录</h4>
@@ -164,7 +164,7 @@
         </div>
         <div class="form-actions">
             <button id="register-back-btn" type="button" class="btn red btn-outline"> 返回 </button>
-            <button type="submit" id="register-submit-btn" class="btn green pull-right"> 注册 </button>
+            <button type="button" id="register-submit-btn" class="btn green pull-right"> 注册 </button>
         </div>
     </form>
     <!-- END REGISTRATION FORM -->
