--- a/pages/authority/role.html
+++ b/pages/authority/role.html
@@ -65,7 +65,7 @@
                                         <a class="btn btn-circle btn-icon-only btn-default" href="javascript:;">
                                             <i class="icon-cloud-upload"></i>
                                         </a>
-                                        <a class="btn btn-circle btn-icon-only btn-default" href="javascript:;">
+                                        <a class="btn btn-circle btn-icon-only btn-default" href="javascript:;" id="openAddRoleForm">
                                             <i class="icon-wrench"></i>
                                         </a>
                                         <a class="btn btn-circle btn-icon-only btn-default" href="javascript:;">
@@ -74,13 +74,14 @@
                                     </div>
                                 </div>
                                 <div class="portlet-body">
-                                    <table id="table-pagination" data-toggle="table" data-url="../../assets/global/plugins/bootstrap-table/data/data2.json" data-height="299" data-pagination="true" data-search="true">
+                                    <table id="role-table-pagination" data-toggle="table"  data-height="500" data-pagination="true" data-search="">
                                         <thead>
                                         <tr>
                                             <th data-field="state" data-checkbox="true"></th>
                                             <th data-field="id" data-align="right" data-sortable="true">Item ID</th>
-                                            <th data-field="name" data-align="center" data-sortable="true">Item Name</th>
-                                            <th data-field="price" data-sortable="true" data-sorter="priceSorter">Item Price</th>
+                                            <th data-field="roleMarking" data-align="roleMarking" data-sortable="true">标识</th>
+                                            <th data-field="roleName" data-sortable="true" data-sorter="roleName">角色名称</th>
+                                            <th data-field="status" data-sortable="true" data-sorter="status">状态</th>
                                         </tr>
                                         </thead>
                                     </table>
@@ -139,6 +140,10 @@
 <script src="../../assets/layouts/layout/scripts/demo.min.js" type="text/javascript"></script>
 <script src="../../assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
 <script src="../../assets/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/layer/layer.js" type="text/javascript"></script>
+<script src="../../resources/scripts/common.js" type="text/javascript"></script>
+<script src="../../resources/scripts/role/role_list.js" type="text/javascript"></script>
+
 <!-- END THEME LAYOUT SCRIPTS -->
 </body>
 
