--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -46,7 +46,7 @@
 <!-- BEGIN LOGIN -->
 <div class="content">
     <!-- BEGIN LOGIN FORM -->
-    <form class="login-form" action="index.html" method="post">
+    <form class="login-form" action="">
         <h3 class="form-title">登录您的帐户</h3>
         <div class="alert alert-danger display-hide">
             <button class="close" data-close="alert"></button>
