--- a/pages/authority/role/role.html
+++ b/pages/authority/role/role.html
@@ -74,7 +74,7 @@
                                     </div>
                                 </div>
                                 <div class="portlet-body">
-                                    <table id="role-table-pagination" data-toggle="table"  data-height="500" data-pagination="true" data-search="">
+                                    <table id="role-table-pagination" data-toggle="table"  data-height="500" data-pagination="true" data-search="false" >
                                         <thead>
                                         <tr>
                                             <th data-field="state" data-checkbox="true"></th>
