--- a/pages/authority/role/role.html
+++ b/pages/authority/role/role.html
@@ -38,19 +38,7 @@
 
 <body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white">
 <div class="page-wrapper">
-    <
-                <!-- END PAGE BAR -->
-                <!-- BEGIN PAGE TITLE-->
-                <h1 class="page-title"> Bootstrap Table Plugin
-                    <small>extended bootstrap tables powered with bootstrap-table plugin</small>
-                </h1>
-                <!-- END PAGE TITLE-->
-                <!-- END PAGE HEADER-->
-                <div class="m-heading-1 border-green m-bordered">
-                    <h3>Bootstrap Table</h3>
-                    <p> An extended Bootstrap table with radio, checkbox, sort, pagination, and other added features. For more info please check out
-                        <a href="https://github.com/wenzhixin/bootstrap-table/" target="_blank">the official documentation</a>. </p>
-                </div>
+
                 <div class="mt-bootstrap-tables">
                     <div class="row">
 
@@ -63,10 +51,10 @@
                                     </div>
                                     <div class="actions">
                                         <a class="btn btn-circle btn-icon-only btn-default" id="role-menus" href="javascript:;">
-                                            <i class="icon-cloud-upload"></i>
+                                            <i class="icon-wrench"></i>
                                         </a>
                                         <a class="btn btn-circle btn-icon-only btn-default" href="javascript:;" id="openAddRoleForm">
-                                            <i class="icon-wrench"></i>
+                                            <i class="icon-plus"></i>
                                         </a>
                                         <a class="btn btn-circle btn-icon-only btn-default" href="javascript:;">
                                             <i class="icon-trash"></i>
