--- a/pages/authority/role/user_role.html
+++ b/pages/authority/role/user_role.html
@@ -41,16 +41,10 @@
     <
     <!-- END PAGE BAR -->
     <!-- BEGIN PAGE TITLE-->
-    <h1 class="page-title"> Bootstrap Table Plugin
-        <small>extended bootstrap tables powered with bootstrap-table plugin</small>
+    <h1 class="page-title">
+
     </h1>
-    <!-- END PAGE TITLE-->
-    <!-- END PAGE HEADER-->
-    <div class="m-heading-1 border-green m-bordered">
-        <h3>Bootstrap Table</h3>
-        <p> An extended Bootstrap table with radio, checkbox, sort, pagination, and other added features. For more info please check out
-            <a href="https://github.com/wenzhixin/bootstrap-table/" target="_blank">the official documentation</a>. </p>
-    </div>
+
     <div class="mt-bootstrap-tables">
         <div class="row">
 
@@ -82,12 +76,12 @@
             <div class="col-md-1" >
                 <div class="clearfix" style="text-align: center;padding-top: 200px;">
 
-                    <a href="javascript:;" id="delRoleBtn" class="btn btn-lg red"> Red
+                    <a href="javascript:;" id="delRoleBtn" class="btn btn-lg red"> 移除
                         <span class="glyphicon glyphicon-trash"> </span>
                     </a>
                     <p></p>
                     <a href="javascript:;" id="addRoleBtn" class="btn btn-lg blue">
-                        <span class="glyphicon glyphicon-plus"> </span> Blue </a>
+                        <span class="glyphicon glyphicon-plus"> </span> 分配 </a>
 
                 </div>
 
