--- a/pages/authority/role/role_add.html
+++ b/pages/authority/role/role_add.html
@@ -58,15 +58,15 @@
                                         <label class="col-md-3 control-label">备注</label>
                                         <div class="col-md-4">
                                                 <input type="text" class="form-control" placeholder="备注" name="remarks">
-                                            </div>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">是否启动</label>
                                         <div class="col-md-4">
-                                            <input type="text" class="form-control" placeholder="是否启动" name="status" value="1002">
+                                            <input type="text" class="form-control" placeholder="是否启动" name="status" readonly value="1002">
                                         </div>
                                     </div>
+                                </div>
 
                                 <div class="form-actions fluid">
                                     <div class="row">
