--- a/pages/authority/user/user_list.html
+++ b/pages/authority/user/user_list.html
@@ -38,19 +38,7 @@
 
 <body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white">
 <div class="page-wrapper">
-    <
-    <!-- END PAGE BAR -->
-    <!-- BEGIN PAGE TITLE-->
-    <h1 class="page-title"> Bootstrap Table Plugin
-        <small>extended bootstrap tables powered with bootstrap-table plugin</small>
-    </h1>
-    <!-- END PAGE TITLE-->
-    <!-- END PAGE HEADER-->
-    <div class="m-heading-1 border-green m-bordered">
-        <h3>Bootstrap Table</h3>
-        <p> An extended Bootstrap table with radio, checkbox, sort, pagination, and other added features. For more info please check out
-            <a href="https://github.com/wenzhixin/bootstrap-table/" target="_blank">the official documentation</a>. </p>
-    </div>
+
     <div class="mt-bootstrap-tables">
         <div class="row">
 
@@ -63,10 +51,10 @@
                         </div>
                         <div class="actions">
                             <a class="btn btn-circle btn-icon-only btn-default" href="javascript:;">
-                                <i class="icon-cloud-upload"></i>
+                                <i class="icon-wrench"></i>
                             </a>
                             <a class="btn btn-circle btn-icon-only btn-default" href="javascript:;" id="openRoleForm">
-                                <i class="icon-wrench"></i>
+                                <i class="icon-plus"></i>
                             </a>
                             <a class="btn btn-circle btn-icon-only btn-default" href="javascript:;">
                                 <i class="icon-trash"></i>
@@ -77,12 +65,13 @@
                         <table id="user-table-pagination" data-toggle="table"  data-height="500" data-pagination="true" data-search="">
                             <thead>
                             <tr>
-                                <th data-field="state" data-checkbox="true"></th>
+                                <th data-field="state" data-radio="true"></th>
                                 <th data-field="id" data-align="right" data-sortable="true">Item ID</th>
                                 <th data-field="userNumber" data-align="userNumber" data-sortable="true">编号</th>
                                 <th data-field="userId" data-sortable="true" data-sorter="roleName">userId</th>
                                 <th data-field="userName" data-sortable="true" data-sorter="userId">用户名</th>
                                 <th data-field="accountType" data-sortable="true" data-sorter="accountType">类型</th>
+                                <th data-field="createDate" data-sortable="true" data-sorter="createDate">注册时间</th>
                                 <th data-field="status" data-sortable="true" data-sorter="status">状态</th>
                             </tr>
                             </thead>
