--- a/pages/authority/menus/menus_list.html
+++ b/pages/authority/menus/menus_list.html
@@ -39,6 +39,9 @@
 
 <body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white">
 <div class="page-wrapper">
+    <h1 class="page-title">
+
+    </h1>
 
     <div class="mt-bootstrap-tables">
         <div class="row">
@@ -47,32 +50,35 @@
                 <div class="portlet red-pink box">
                     <div class="portlet-title">
                         <div class="caption">
-                            <i class="fa fa-cogs"></i>Ajax Tree with Drag & Drop </div>
+                            <i class="fa fa-cogs"></i>Ajax Tree</div>
                         <div class="tools">
-                            <a href="javascript:;" class="collapse"> </a>
+                           <!-- <a href="javascript:;" class="collapse"> </a>
                             <a href="#portlet-config" data-toggle="modal" class="config"> </a>
+                            <a href="javascript:;" class="remove"> </a>-->
                             <a href="javascript:;" class="reload"> </a>
-                            <a href="javascript:;" class="remove"> </a>
+
                         </div>
                     </div>
                     <div class="portlet-body">
-                        <div id="tree_3" class="tree-demo"> </div>
-                        <div class="alert alert-info no-margin margin-top-10"> Note! The tree nodes are loaded from ../demo/jstree_ajax_data.php via ajax. </div>
+                        <div id="menus_tree" class="tree-demo"> </div>
                     </div>
                 </div>
             </div>
             <!-- 资源树行菜单 结束 -->
 
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <div class="portlet red-pink box">
                     <div class="portlet-title">
                         <div class="caption">
                             <i class="fa fa-cogs"></i>table</div>
                         <div class="tools">
-                            <a href="javascript:;" class="collapse"> </a>
-                            <a href="#portlet-config" id="openAddMenusForm" data-toggle="modal" class="config"> </a>
+                            <!--<a href="javascript:;" class="collapse"> </a>
                             <a href="javascript:;" class="reload"> </a>
-                            <a href="javascript:;" class="remove"> </a>
+                            <a href="javascript:;" class="glyphicon glyphicon-trash"> </a>-->
+                            <a href="#portlet-config" id="openAddMenusForm" data-toggle="modal" class="glyphicon glyphicon-plus"> </a>
+                            <a href="javascript:;" class="glyphicon glyphicon-pencil"> </a>
+                            <a href="javascript:;" class="glyphicon glyphicon-trash"> </a>
+
                         </div>
                     </div>
                     <div class="portlet-body">
