--- a/pages/authority/menus/menus_add.html
+++ b/pages/authority/menus/menus_add.html
@@ -32,72 +32,87 @@
     <link rel="shortcut icon" href="favicon.ico" /> </head>
 <!-- END HEAD -->
 
-<body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white">
-<div class="page-wrapper">
+<body >
+<div class="page-content">
 
+    <div class="row">
+        <div class="col-md-12">
+                <div class="portlet-body form">
+                    <form class="form-horizontal" id="muens-form" >
+                        <div class="form-body">
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">名称</label>
+                                <div class="col-md-9">
+                                    <input type="text" class="form-control" name="menuName" placeholder="名称">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                               <!-- <label class="col-md-3 control-label">类型</label>
+                                <div class="col-md-9">
+                                    <input type="text" class="form-control " placeholder="类型" name="menuType">
+                                </div>-->
+                                <label class="col-md-3 control-label">类型</label>
+                                <div class="col-md-9">
+                                    <div class="mt-radio-inline">
+                                        <label class="mt-radio">
+                                            <input type="radio" name="menuType" id="optionsRadios4" value="1001" > 目录
+                                            <span></span>
+                                        </label>
+                                        <label class="mt-radio">
+                                            <input type="radio" name="menuType" id="optionsRadios5" value="1002" checked> 菜单
+                                            <span></span>
+                                        </label>
+                                        <label class="mt-radio">
+                                            <input type="radio" name="menuType" id="optionsRadios6" value="1003" > 按钮
+                                            <span></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">序号</label>
+                                <div class="col-md-9">
+                                    <input type="number" class="form-control" placeholder="序号" name="serialNumber">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">图标</label>
+                                <div class="col-md-9">
 
-    <div class="col-md-6">
-            <div class="portlet-body form">
-                <form class="form-horizontal" id="muens-form" role="form">
-                    <div class="form-body">
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">名称</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" name="menuName" placeholder="名称">
-                                <span class="help-block"> A block of help text. </span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">类型</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control " placeholder="类型" name="menuType">
-                                <span class="help-inline"> Inline help. </span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">序号</label>
-                            <div class="col-md-9">
-                                <input type="email" class="form-control" placeholder="序号" name="serialNumber">
-                                <span class="help-inline"> Inline help. </span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">图标</label>
-                            <div class="col-md-9">
+                                        <input type="text" class="form-control" placeholder="图标" name="menuIcon">
+                                </div>
 
-                                    <input type="email" class="form-control" placeholder="图标" name="menuIcon">
                             </div>
-
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">menuUrl</label>
-                            <div class="col-md-9">
-                                    <input type="password" class="form-control" name="menuUrl" placeholder="menuUrl">
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">链接</label>
+                                <div class="col-md-9">
+                                        <input type="text" class="form-control" name="menuUrl" placeholder="链接">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">授权标识</label>
-                            <div class="col-md-9">
-                                    <input type="text" class="form-control" placeholder="授权标识" name="authorizedSigns">
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">授权标识</label>
+                                <div class="col-md-9">
+                                        <input type="text" class="form-control" placeholder="授权标识" name="authorizedSigns">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">状态</label>
-                            <div class="col-md-9">
-                                    <input type="text" class="form-control" placeholder="状态" name="status">
-                                    <input type="hidden" id="parentMenuNumber" name="parentMenuNumber">
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">状态</label>
+                                <div class="col-md-9">
+                                        <input type="text" class="form-control" placeholder="状态" value="1002" readonly name="status">
+                                        <input type="hidden" id="parentMenuNumber" name="parentMenuNumber">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="form-actions">
-                        <div class="row">
-                            <div class="col-md-offset-3 col-md-9">
-                                <button type="button" id="submit-btn" class="btn green">Submit</button>
-                                <button type="button" class="btn default">Cancel</button>
+                        <div class="form-actions">
+                            <div class="row">
+                                <div class="col-md-offset-3 col-md-9">
+                                    <button type="button" id="submit-btn" class="btn green">Submit</button>
+                                    <button type="button" class="btn default">Cancel</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
@@ -127,7 +142,9 @@
 <script src="../../../assets/layouts/layout/scripts/demo.min.js" type="text/javascript"></script>
 <script src="../../../assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
 <script src="../../../assets/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
-
+<script src="../../../assets/global/plugins/layer/layer.js" type="text/javascript"></script>
+<script src="../../../resources/scripts/common.js" type="text/javascript"></script>
+<script src="../../../resources/scripts/menus/menus_add.js" type="text/javascript"></script>
 
 <!-- END THEME LAYOUT SCRIPTS -->
 
