--- a/pages/authority/role/role_add.html
+++ b/pages/authority/role/role_add.html
@@ -106,6 +106,7 @@
 <script src="../../../assets/layouts/layout/scripts/demo.min.js" type="text/javascript"></script>
 <script src="../../../assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
 <script src="../../../assets/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
+<script src="../../../assets/global/plugins/layer/layer.js" type="text/javascript"></script>
 <script src="../../../resources/scripts/common.js" type="text/javascript"></script>
 <script src="../../../resources/scripts/role/role_add.js" type="text/javascript"></script>
 <!-- END THEME LAYOUT SCRIPTS -->
