--- a/pages/authority/menus/menus_list.html
+++ b/pages/authority/menus/menus_list.html
@@ -55,7 +55,7 @@
                            <!-- <a href="javascript:;" class="collapse"> </a>
                             <a href="#portlet-config" data-toggle="modal" class="config"> </a>
                             <a href="javascript:;" class="remove"> </a>-->
-                            <a href="javascript:;" class="reload"> </a>
+                            <a href="javascript:;" id="reload-tree" class="reload"> </a>
 
                         </div>
                     </div>
