--- a/pages/authority/menus/role_menus.html
+++ b/pages/authority/menus/role_menus.html
@@ -63,11 +63,11 @@
             <div class="col-md-1" >
                 <div class="clearfix" style="text-align: center;padding-top: 200px;">
 
-                    <a href="javascript:;" id="delRoleBtn" class="btn btn-lg red"> Red
+                    <a href="javascript:;" id="delMenusBtn" class="btn btn-lg red"> Red
                         <span class="glyphicon glyphicon-trash"> </span>
                     </a>
                     <p></p>
-                    <a href="javascript:;" id="addRoleBtn" class="btn btn-lg blue">
+                    <a href="javascript:;" id="addMenusBtn" class="btn btn-lg blue">
                         <span class="glyphicon glyphicon-plus"> </span> Blue </a>
 
                 </div>
