--- a/pages/index.html
+++ b/pages/index.html
@@ -228,7 +228,7 @@
                                 </a>
                                 <ul class="sub-menu">
                                     <li class="nav-item start active open">
-                                        <a href="index.html" class="nav-link ">
+                                        <a href="javascript:Index.openPageHtml('/access/pages/authority/user/user_list.html');" class="nav-link ">
                                             <i class="icon-bar-chart"></i>
                                             <span class="title">Dashboard 1</span>
                                             <span class="selected"></span>
@@ -359,7 +359,7 @@
                         <div class="page-bar">
                             <ul class="page-breadcrumb">
                                 <li>
-                                    <a href="index.html">Home</a>
+                                    <a href="javascript:;">Home</a>
                                     <i class="fa fa-circle"></i>
                                 </li>
                                 <li>
@@ -375,6 +375,12 @@
                             </div>
                         </div>
                         <!-- END PAGE BAR -->
+
+                        <iframe name="mainIframe" id="mainIframe" frameborder="0" height="650px" width="100%" scrolling="auto" ></iframe>
+
+
+
+
 
                         </div>
                     </div>
