--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -194,6 +194,7 @@
 <!-- END PAGE LEVEL PLUGINS -->
 <!-- BEGIN THEME GLOBAL SCRIPTS -->
 <script src="../../assets/global/scripts/app.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/layer/layer.js" type="text/javascript"></script>
 <!-- END THEME GLOBAL SCRIPTS -->
 <script src="../../resources/scripts/common.js" type="text/javascript"></script>
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
